--- a/templates/main_home_pli.html
+++ b/templates/main_home_pli.html
@@ -38,7 +38,7 @@
                     <div class="cover"></div>
                     <div class="cover"></div>
                 </div>
-                <div class="mix-title">Mix1</div>
+                <a href="/list" class="mix-title">Mix1</a>
             </div>
             <div class="mix">
                 <div class="album-covers">
@@ -47,7 +47,7 @@
                     <div class="cover"></div>
                     <div class="cover"></div>
                 </div>
-                <div class="mix-title">Mix2</div>
+                <a href="/list" class="mix-title">Mix2</a>
             </div>
             <div class="mix">
                 <div class="album-covers">
@@ -56,7 +56,7 @@
                     <div class="cover"></div>
                     <div class="cover"></div>
                 </div>
-                <div class="mix-title">Mix3</div>
+                <a href="/list" class="mix-title">Mix3</a>
             </div>
         </div>
     </div>
