--- a/templates/home.html
+++ b/templates/home.html
@@ -23,37 +23,30 @@
             <img src="/static/images/home.png" alt="Home Icon" class="sidebar-icon">
             <span class="sidebar-text">홈</span>
         </a>
-        <a href="/box" class="sidebar-item">
-            <img src="/static/images/archive.png" alt="Archive Icon" class="sidebar-icon">
-            <span class="sidebar-text">보관함</span>
-        </a>
     </aside>
 
     <!-- 메인 콘텐츠 -->
     <main class="content">
+        <h2>오늘 기분은 어떠세요?</h2>
         <div class="box-container">
             <!-- 첫 번째 박스 -->
-            <a href="main_home_pli.html" class="box">
+            <a href="/box" class="box">
                 <img src="/static/images/happy.png" alt="행복이 이미지" class="box-image">
-                <p class="box-text">행복이</p>
             </a>
 
             <!-- 두 번째 박스 -->
-            <a href="main_home_pli.html" class="box">
+            <a href="/box" class="box">
                 <img src="/static/images/soso.png" alt="보통이 이미지" class="box-image">
-                <p class="box-text">보통이</p>
             </a>
 
             <!-- 세 번째 박스 -->
-            <a href="main_home_pli.html" class="box">
+            <a href="/box" class="box">
                 <img src="/static/images/angry.png" alt="화남이 이미지" class="box-image">
-                <p class="box-text">화남이</p>
             </a>
 
             <!-- 네 번째 박스 -->
-            <a href="main_home_pli.html" class="box">
+            <a href="/box" class="box">
                 <img src="/static/images/sad.png" alt="슬픔이 이미지" class="box-image">
-                <p class="box-text">슬픔이</p>
             </a>
         </div>
     </main>
